[#94] Fixed uneven margins

--- a/styles/App.scss
+++ b/styles/App.scss
@@ -40,3 +40,7 @@ body {
   background-size: cover;
   background-position: center;
 }
+
+.swquiz-app {
+  padding-top: 4vh;
+}
